# OSINT_analysis

./: .gitignore  README.md  pyproject.toml
files/: check_email_is_breached.py  read_files.py
